--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,5 +1,11 @@
 @import '../../styles.scss';
 
+.rejects,
+.unmoderated,
+.approved {
+    width: 580px;
+}
+
 .main {
     display: flex;
     flex-direction: column;
@@ -75,4 +81,23 @@
     height: 24px;
     width: 24px;
     padding: 0;
+}
+
+.floating-submit-button {
+    position: fixed;
+    background-color: #ff6f00;
+    color: #000000;
+    border-radius: 3px;
+    height: 70px;
+    width: 216px;
+    font-weight: bold;
+    font-size: 16px;
+    bottom:10vh;
+    right:5vw;
+    &:active {
+        opacity: .7;
+    }
+    &:hover {
+        opacity: .9;
+    }
 }
