Remove useless minlength, minor style adjustment on submission box

--- a/src/app/vox-pop/vox-pop.component.html
+++ b/src/app/vox-pop/vox-pop.component.html
@@ -4,7 +4,7 @@
         <div class="submission-divider">
         </div>
         <textarea name="submissionArea" formControlName="submissionArea" #submissionArea  
-               required minlength="2" placeholder="Write your sub here, bro. . ." class="submission-box">
+               required placeholder="Write your sub here, bro. . ." class="submission-box">
         </textarea>
         <button class="submission-button" (click)="submit(submissionArea.value)">Submit</button>
     </div>
