--- a/src/app/vox-pop/vox-pop.component.scss
+++ b/src/app/vox-pop/vox-pop.component.scss
@@ -13,7 +13,9 @@ $submission-box-height: 75px;
 }
 
 .submission-box {
-    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color: white;
     height: 75px; 
     width: 400px;
     margin-bottom: 5px;
@@ -27,7 +29,7 @@ $submission-box-height: 75px;
 
 ::placeholder {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
     color: white;
     opacity: .7;
