Fix sub divider height calc

--- a/src/app/vox-pop/vox-pop.component.scss
+++ b/src/app/vox-pop/vox-pop.component.scss
@@ -23,7 +23,7 @@ $submission-box-height: 75px;
 }
 
 .submission-divider {
-    height: $submission-box-height / 2;
+    height: calc($submission-box-height / 2);
     width: 400px;
 }
 
